# terminal-dashboard

./: .env.example  .gitignore  AUTO_LOGOUT_FIX.md  CHANGELOG.md  CONTRIBUTING.md  DNS-SETUP-GUIDE.md  Dashboard Requirements.txt  Dockerfile  LICENSE  README.md  SECURITY.md  build-production.sh  deploy-ethihad-rail.sh  docker-compose.yml  git-setup.sh  odoo-v17-python-api-guide.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh  start-dev.bat  start-venv.sh  start.sh  x_studio_confirmed_field_analysis.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: PERMISSION_TEST_RESULTS.md  RAIL_FREIGHT_ORDER_ANALYSIS.md  SIJI_LOADING_PROGRESS_FINAL.md  SIJI_RAIL_FREIGHT_DISCOVERY.md  SIJI_TERMINAL_ANALYSIS.md  analyze_siji_loading_progress.py  auth_dependencies.py  auth_models.py  auth_service.py  database.py  explore_rail_freight_order.py  explore_siji_rail_freight_detailed.py  explore_siji_terminal.py  main.py  odoo_api.py  odoo_api2.py  siji_loading_progress_sample.json  test_direct_rail_freight_access.py  test_forwarding_orders_detailed.py  test_rail_freight_comprehensive.py  test_rail_freight_permissions.py  wagon_trip_fields.json  x_rail_freight_order_fields.json  x_wagon_trip_fields.json
backend/tests/: test_main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: DepartureDotPlot.vue  IntermodalTrainDepartures.vue  RUWContainerStatus.vue  RealisticTrainBackground.vue  StockpileBar.vue  (+2 more)
(+7 files in other folders)
